# sdl_shooter

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: config.h  core.h  engine.cpp  engine.h  log_formatter.cpp  log_formatter.h  main.cpp
